[metadata]
name = django-symmetric-fields-Szczaleg
version = 0.0.1
author = Szczaleg
author_email = igor.strzalka@gmail.com
description = Symmetric encryption for model fields in Django
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Szczaleg/django-symmetric-fields
project_urls =
    Bug Tracker = https://github.com/Szczaleg/django-symmetric-fields/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = fernetfields
packages = find:
python_requires = >=3.6

[options.packages.find]
where = fernetfields